--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,56 +1,139 @@
-h1,
-h2 { #color: #fff }
-h2 {
-    padding-bottom: 1em;
-    margin-bottom: 0;
-    border-bottom: 1px dashed #6a6a6a;
+/* @override http://autoschema.dev/css/main.css */
+
+body{
+	font-family: 'Myriad Pro', HelveticaNeue, sans-serif;
+	color: #445;
+	background: #f4f4f4;
+	padding: 0;
+	margin: 0;
 }
-.autoschema h3 {
-    color: #999;
-    margin: .5em 0;
-    width: 20%;
+
+.page{}
+
+.col{
+	max-width: 60em;
+	margin: 0 auto;
+	overflow: hidden;
+}
+ .col .inner{
+ 	padding: 0 1em;
+ }
+
+header{
+	background: #333;
+	color: #fff;
+}
+
+	header .col{
+		background: #333;
+		color: #fff;
+		border-left: 1px solid #444;
+		border-right: 1px solid #444;
+	}
+	
+	header h2{
+		margin: .2em 0 1.3em;
+	}
+
+.main .col{
+	border-left: 1px solid #ddd;
+	border-right: 1px solid #ddd;
+}
+footer{
+	border-top: 1px solid #ddd;
+	padding:  1em 0;
+}
+
+h1{
+	font-size: 2.7em;
+	line-height: 1.2;
+	margin-bottom: 0;
+	font-weight: lighter;
+}
+h2{
+	font-style: italic;
+}
+
+table.autoschema{
+	margin: 0;
+	padding: 0;
+	list-style: none;	
+}
+table.autoschema th,
+table.autoschema td{
+    border-top: 1px solid #ddd;
+    padding: 1em;
+}
+table.autoschema .details{
+    border-left: 1px solid #ddd;
+    border-right: 1px solid #ddd;
+}
+table.autoschema h4{
     float: left;
-}
-.tables {
     margin: 0;
-    padding: 0;
-    list-style: none;
+    color: #db381d;
 }
-.tables > li {
-    border-bottom: 1px dashed #6a6a6a;
-    overflow: hidden;
+table.autoschema .details ol{
+	list-style: none;
+	float: left;
+	margin: 0;
+	list-style: decimal;
 }
-.tables li[class*="missing"] { }
-.tables li[class*="missing"] h3,
-.tables li[class*="missing"] .errors { opacity: 0.5 }
-.tables .valid-false h3 { color: #fb503b }
-.tables .errors {
-    font-size: .9em;
-    width: 50%;
-    display: block;
-    float: left;
+
+table.autoschema [class*=missing] th,
+table.autoschema [class*=missing] td{
+	background: #eee;
+	color: #777;
 }
-.tables .action {
-    float: right;
-    text-align: right;
-    width: 20%;
-    margin: 1em 0;
+
+table.autoschema .action{
+	text-align: right;
+    vertical-align: middle;
 }
-.btn {
-    display: inline-block;
-    padding: 3px 5px 4px;
-    font-size: 12px;
-    line-height: 1.4;
-    color: #333333;
-    text-align: center;
-    text-shadow: 0 1px 1px rgba(255, 255, 255, 0.75);
-    background-color: #fafafa;
-    background-image: -webkit-linear-gradient(#ffffff, #ffffff 25%, #e6e6e6);
-    background-repeat: no-repeat;
-    border: 1px solid #ccc;
-    border-bottom-color: #bbb;
-    border-radius: 4px;
-    box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
-    cursor: pointer;
-    text-decoration: none;
+
+.btn{
+	background: #0093d0;
+	border-radius: 2px;
+	padding: .6em 1em .4em;
+	border: 0;
+	text-decoration: none;
+	font-weight: bold;
+	color: #fff;
+	text-transform: uppercase;
+	font-size: .8em;
+	-webkit-transition: background-color .2s;
+	transition: background-color .2s;
 }
+.btn:hover{
+	background-color: #20bcfd;
+}
+
+.btn-red{
+	background-color: #db381d;
+}
+.btn-red:hover{
+	background-color: #f35136;
+}
+.btn-green{
+	background-color: #4ea829;
+}
+.btn-green:hover{
+	background-color: #5fd12f;
+}
+.btn-grey{
+	background-color: #aaa;
+}
+.btn-grey:hover{
+	background-color: #c3c3c3;
+}
+
+table.layout{
+    width: 100%;
+    border-collapse: collapse;
+}
+table.layout th,
+table.layout td{
+    text-align: left;
+    vertical-align: top;
+}
+
