--- a/public/autoschema-theme/css/main.css
+++ b/public/autoschema-theme/css/main.css
@@ -1,3 +1,4 @@
+@import url(form.css);
 /*! normalize.css v2.1.0 | MIT License | git.io/normalize */
 /* ==========================================================================
    HTML5 display definitions
@@ -327,4 +328,24 @@ table.layout th,
 table.layout td {
   text-align: left;
   vertical-align: top;
+}
+
+table.display{
+  width: 100%;
+}
+
+table.database{
+  margin: 1em 0;
+  border-collapse: collapse;
+}
+
+table.database thead th,
+table.database thead td{
+  background: #eee;
+  font-weight: bold;
+}
+
+table.database td{
+  border: 1px solid #ccc;
+  padding: .6em 1em;
 }
